--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,13 +24,8 @@ $background-color:  #fff;
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
 
-$colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
-);
+$colors: ( primary: #e3672a, secondary : #32db64, danger : #f53d3d, light : #f4f4f4, dark : #222);
+
 
 
 // App iOS Variables
