--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,15 @@
-page-home {
+#escudo_svg{
+    width:120px;
+    height:125px;
+    background-color: transparent !important
+}
 
+.item-inner h2{
+  text-align: center;
+  font-weight: bold;
+}
+
+
+#nm-time .item-inner{
+    border-bottom: 0px !important;
 }
