--- a/src/pages/ligas/ligas.scss
+++ b/src/pages/ligas/ligas.scss
@@ -1,3 +1,20 @@
-page-ligas {
-
+#nm-time-container .item-inner {
+    border-bottom: 0px !important;
 }
+
+#liga-container .item-inner {
+  border-bottom: 0px !important;
+}
+
+
+#nm-time{
+  text-align: center;
+    font-weight: bold;
+}
+
+#nm-liga {
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+
