--- a/src/pages/liga-detail/liga-detail.scss
+++ b/src/pages/liga-detail/liga-detail.scss
@@ -1,3 +1,18 @@
-page-liga-detail {
-
+#nm-time-container .item-inner {
+  border-bottom: 0px !important;
 }
+
+#liga-container .item-inner {
+  border-bottom: 0px !important;
+}
+
+#nm-time {
+  text-align: center;
+  font-weight: bold;
+}
+
+#nm-liga {
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
