Paginas de liga ok, construindo paginas de time

--- a/src/pages/liga-detail/liga-detail.scss
+++ b/src/pages/liga-detail/liga-detail.scss
@@ -24,6 +24,7 @@
 
 #border-bottom-row {
   border-bottom: 1px solid #dedede;
+  height: 61px !important;
 }
 
 .seta-variacao {
@@ -63,3 +64,16 @@
   max-width: 65% !important;
   width: 180px !important;
 }
+
+.item-escudo{
+  height: 55px !important;
+}
+
+.liga-flamula-content {
+  align-self: center;
+}
+
+.liga-flamula{
+  margin-right: 0px !important; 
+}
+
