--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -14,7 +14,9 @@ $font-path: "../assets/fonts";
 
 $text-color:        #000;
 $background-color:  #fff;
-
+$refresher-icon-color: #e3672a;
+$refresher-text-color: #e3672a;
+$refresher-border-color:#e3672a;
 
 // Named Color Variables
 // --------------------------------------------------
