--- a/src/pages/time-detail/time-detail.scss
+++ b/src/pages/time-detail/time-detail.scss
@@ -15,3 +15,20 @@
 .no-border-bottom .item-inner {
   border-bottom: 0px !important;
 }
+
+.foto-jogador {
+  width: 50px !important;
+  height: 50px !important;
+}
+
+.foto-jogador-container {
+  margin-bottom: 0px !important;
+}
+
+.jogador-container .item-inner{
+  border-bottom: 0px !important;
+}
+
+
+
+.time-escudo {}
