--- a/src/pages/jogador-details/jogador-details.scss
+++ b/src/pages/jogador-details/jogador-details.scss
@@ -13,3 +13,12 @@
 .no-border-bottom ion-label{
   margin-bottom: 0px;
 }
+.scout-name{
+  margin-bottom: 0px !important;
+  font-size: 1.2rem;
+}
+
+.border-bottom {
+  border-bottom: 1px solid #dedede;
+}
+
