--- a/src/pages/time-detail/time-detail.scss
+++ b/src/pages/time-detail/time-detail.scss
@@ -62,3 +62,11 @@
   border-radius: 50% !important;
 }
 
+.jogador-container .item-inner .label-md{
+  margin-bottom: 0px !important;
+}
+
+.lbl-nome-09-rem{
+  font-size: 0.9rem !important;
+}
+
