--- a/src/pages/jogos/jogos.scss
+++ b/src/pages/jogos/jogos.scss
@@ -1,3 +1,21 @@
-page-jogos {
+// .clube-escudo {
+//   width: 40px !important;
+//   min-width: 40px !important;
+//   height: 40px !important;
+//   min-height: 40px !important;
+// //   margin-right: 5px !important;
+// }
 
-}
+// .clube-escudo #escudo {
+//   width: 40px !important;
+//   height: 41px !important;
+// }
+
+// .clube-item {
+// //   padding-left: 0px !important;
+// }
+
+// .clube-item .item-inner {
+//   border-bottom: 0px !important;
+// }
+
