--- a/src/pages/time-detail/time-detail.scss
+++ b/src/pages/time-detail/time-detail.scss
@@ -46,17 +46,19 @@
   top: 5px;
 }
 
-// .jogador-capitao-icon {
-//   width: 18px !important;
-//   height: 18px !important;
-//   position: absolute;
-//   left: 55px;
-// }
 .jogador-capitao-icon {
-  width: 13px;
-  height: 13px;
-  vertical-align: middle;
+  width: 18px !important;
+  height: 18px !important;
+  position: absolute;
+  left: 55px;
+  bottom: 0px;
 }
+
+// .jogador-capitao-icon {
+//   width: 13px;
+//   height: 13px;
+//   vertical-align: middle;
+// }
 
 
 
